calendar finished, still some bugs-- when first opened cal is squished. Also, after adding task cal doesn't reflect new task

--- a/style.css
+++ b/style.css
@@ -133,6 +133,12 @@ div.list ul li{
     padding:1rem;
     overflow-y: scroll;
 }
+#cal{
+    top: 10%;
+    left: 10%;
+    right: 10%;
+    bottom: 10%;
+}
 .pop-up::-webkit-scrollbar {
     display: none;
   }
